--- a/oefening-04/index.html
+++ b/oefening-04/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>oef4</title>
 </head>
 <body>
     <main>
-        
+            
+        <h1>We gaan enkele definities</h1>
+            <dl>
+                <dt>HTML</dt>
+                <dd>Hypertext Markup Language is de taal waarmee we de structuur van een webpagina gaan bepalen.</dd>
+                <dt>CSS</dt>
+                <dd>Cascading Stylesheet</dd>
+            </dl>
     </main>
 </body>
 </html>
